# endap-firmware

./: .gitignore  AGENTS.md  CMakeLists.txt  ENDAP_failsafe_v1_1.patch  LICENSE  PLANS.md  README.md  README_ENDAP_SECURITY_V2_P1.txt  ROADMAP.md  sdkconfig  sdkconfig.old
components/cluster/: CMakeLists.txt  cluster_discovery.c  cluster_events.c  cluster_failover.c  cluster_io.c  cluster_io_map.c  cluster_manager.c  cluster_self_test.c  cluster_transport.c  node_registry.c
components/cluster/include/: cluster_discovery.h  cluster_events.h  cluster_failover.h  cluster_io.h  cluster_io_map.h  cluster_manager.h  cluster_metrics.h  cluster_self_test.h  cluster_transport.h  node_registry.h
components/cluster/node_identity/: CMakeLists.txt  node_identity.c
components/cluster/node_identity/include/: node_identity.h
components/comm/parser/: CMakeLists.txt  parser.c
components/comm/protocol/: CMakeLists.txt  protocol.c
components/dashboard/: CMakeLists.txt  index.html
components/dashboard/include/: dashboard.h
components/dashboard/src/: dashboard.c
components/data/_device_manager/: CMakeLists.txt  device_manager.c
components/data/io_image/: CMakeLists.txt  io_image.c
components/data/state/: CMakeLists.txt  state.c
components/device_profile/: CMakeLists.txt  Kconfig.projbuild  device_profile.c
components/device_profile/include/: device_profile.h
components/hal/hal_layer/: hal_gpio.c  (+4 more)
components/kernel/core/: CMakeLists.txt  core_boot.c
components/kernel/core/include/: core_boot.h  core_supervisor.h  logging.h
components/runtime/http_server/: CMakeLists.txt  http_server.c
components/runtime/http_server/include/: http_server.h
docs/: api-contract.md  architecture.md  channel_identity_model.md  current_state.md  demo_validation.md  fieldbus.md  kernel.md  stable_rc_public_api_plan.md  stable_release_software_memory.md  studio-dashboard-reference.md  transport_runtime_validation.md
main/: CMakeLists.txt  main.c
rs485_slave_test/: CMakeLists.txt  README.md
rs485_slave_test/main/: CMakeLists.txt  rs485_slave_test.c
tools/: set_transport_profile.sh
wifi_test/: CMakeLists.txt
wifi_test/main/: CMakeLists.txt
(+116 files in other folders)
